--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     max-width:90%;
     background-color: #FFFAF7;
     font-family:Arial, Helvetica, sans-serif;
